--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -359,7 +359,7 @@
             <div class="card">
                 <h3>Web Development</h3>
                 <video controls>
-                    <source src="{% static 'project_data/web_video.mp4' %}" type="video/mp4">
+                    <source src="{% static 'project_data/web_development_technowin.mp4' %}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <p>TechnoWin IT Infra Pvt Ltd has created a user-friendly, responsive web development project 🌐💻. Focused on innovative designs, seamless performance, and secure solutions 🔒, it caters to diverse business needs. Perfect for boosting online presence! 🚀✨</p>
