--- a/Template/Home/software.html
+++ b/Template/Home/software.html
@@ -149,46 +149,70 @@
         <h3>App Development</h3>
         <div class="app-dev-container">
         
-          <div class="video-card fadeInLeft">
-              <video controls>
-                  <source src="{% static 'project_data/app_video.mp4' %}" type="video/mp4">
-                  Your browser does not support the video tag.
-              </video>
-          </div>
+            <div class="video-card fadeInLeft">
+                <video controls>
+                    <source src="{% static 'project_data/psn_headon_technowin.mp4' %}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video><br> <br>
+                <h2>Head-On App - Slot Booking Software</h2>
+                <h4>PSN Supply Chain Pvt Ltd</h4>
+                <p>Mobile App and Web Development, Deployment, Implementation, Training, Maintenance and Support. 
+                    <br>
+                   Server setup for development and testing.
+                   <br> 
+                   Technology: Flutter, Dart, Django Python, MySQL, Cloud: AWS EC2
+                </p>
+            </div>
+            
   
           <!-- Text Card -->
           <div class="text-card fadeInRight">
-              <h2>Next-Gen App Development</h2>
-              <p>At TechnoWin IT Infra, we develop cutting-edge applications that enhance user experience and boost business growth. Our solutions focus on performance, scalability, and user-centric design.</p>
+              <p>PSN maintains a Pool of Employees who work when there is a requirement by PSN customers like Amazon, Flipkart etc. The customer or PSN does this by opening slots/ shifts as per their requirement, the notification of which is sent to the Pool Employee on his registered App. The Pool Employee applies for these Slots as per hi convenience. The Attendance of the Employee is captured on the Slot day and his salary for the day is calculated based on the rate card assigned to his state and designation. The salary once approved is paid out to his registered account immediately and the UTR no and the  Pay slip is sent to his App. Employee’s profile data is displayed on the App and has an option to change the same. This includes the account details, which when changed hits a gateway which validates the modified account details and saves the new details only when correct. Employee can be added or removed from the Pool to maintain the Pool Hygiene based on performance in a period. 
+                </p>
           </div>
           
 
              <!-- Text Card -->
-        <div class="text-card fadeInRight">
-          <h2>Next-Gen App Development</h2>
-          <p>At TechnoWin IT Infra, we develop cutting-edge applications that enhance user experience and boost business growth. Our solutions focus on performance, scalability, and user-centric design.</p>
-      </div>
-          <div class="video-card fadeInLeft">
-            <video controls>
-                <source src="{% static 'project_data/technowin_app_video.mp4' %}" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
+             <div class="text-card fadeInRight">
+                <p>PSN maintains a Pool of Employees who work when there is a requirement by PSN customers like Amazon, Flipkart etc. The customer or PSN does this by opening slots/ shifts as per their requirement, the notification of which is sent to the Pool Employee on his registered App. The Pool Employee applies for these Slots as per hi convenience. The Attendance of the Employee is captured on the Slot day and his salary for the day is calculated based on the rate card assigned to his state and designation. The salary once approved is paid out to his registered account immediately and the UTR no and the  Pay slip is sent to his App. Employee’s profile data is displayed on the App and has an option to change the same. This includes the account details, which when changed hits a gateway which validates the modified account details and saves the new details only when correct. Employee can be added or removed from the Pool to maintain the Pool Hygiene based on performance in a period. 
+                  </p>
+            </div>
+
+      <div class="video-card fadeInLeft">
+        <video controls>
+            <source src="{% static 'project_data/psn_headon_technowin.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+        </video><br> <br>
+        <h2>PSN Headon</h2>
+        <h4>PSN Supply Chain Pvt Ltd</h4>
+        <p>Mobile App and Web Development, Deployment, Implementation, Training, Maintenance and Support. 
+            <br>
+           Server setup for development and testing.
+           <br> 
+           Technology: Flutter, Dart, Django Python, MySQL, Cloud: AWS EC2
+        </p>
+    </div>
 
      
-        
-        <div class="video-card fadeInLeft">
-          <video controls>
-              <source src="{% static 'project_data/app_video.mp4' %}" type="video/mp4">
-              Your browser does not support the video tag.
-          </video>
-      </div>
-
+    <div class="video-card fadeInLeft">
+        <video controls>
+            <source src="{% static 'project_data/psn_ontime_project.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+        </video><br> <br>
+        <h2>On-Time App - Attendance Confirmation Software</h2>
+        <h4>PSN Supply Chain Pvt Ltd</h4>
+        <p>Mobile App and Web Development, Deployment, Implementation, Training, Maintenance and Support. <br>
+            Server setup for development and testing
+            <br>
+            Technology: Flutter, Dart, Django Python, MySQL, Cloud: AWS EC2
+            
+        </p>
+    </div>
       <!-- Text Card -->
       <div class="text-card fadeInRight">
-          <h2>Next-Gen App Development</h2>
-          <p>At TechnoWin IT Infra, we develop cutting-edge applications that enhance user experience and boost business growth. Our solutions focus on performance, scalability, and user-centric design.</p>
-      </div>
+              <p>PSN maintains a Pool of Employees who work when there is a requirement by PSN customers like Amazon, Flipkart etc. The customer or PSN does this by opening slots/ shifts as per their requirement, the notification of which is sent to the Pool Employee on his registered App. The Pool Employee applies for these Slots as per hi convenience. The Attendance of the Employee is captured on the Slot day and his salary for the day is calculated based on the rate card assigned to his state and designation. The salary once approved is paid out to his registered account immediately and the UTR no and the  Pay slip is sent to his App. Employee’s profile data is displayed on the App and has an option to change the same. This includes the account details, which when changed hits a gateway which validates the modified account details and saves the new details only when correct. Employee can be added or removed from the Pool to maintain the Pool Hygiene based on performance in a period. 
+                </p>
+          </div>
       </section>
 
 
@@ -198,15 +222,22 @@
         
             <div class="web-video-card slideInLeft">
                 <video controls>
-                    <source src="{% static 'project_data/web_project1.mp4' %}" type="video/mp4">
+                    <source src="{% static 'project_data/water_connection_project.mp4' %}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
     
             <!-- Text Card -->
             <div class="web-text-card slideInRight">
-                <h2>Innovative Web Solutions</h2>
-                <p>At TechnoWin IT Infra, we create high-performing websites and web applications that enhance digital experiences. Our development process prioritizes speed, security, and seamless user interaction.</p>
+                <h2>Water Connection</h2>
+                <h4>CIDCO – Water Department, Engineering Department and Horticulture Department</h4>
+                <p>The Web Application is developed for Citizens falling under CIDCO administration to avail water connection for their Societies or buildings or plots. The application is also integrated with Aaple Sarkar for the convenience of the Citizen. This application is integrated with the already existing water charges application of CIDCO.   
+
+                    Development, Deployment, Implementation, Training, Maintenance and Support. 
+                    Server setup for development and testing, Integration with the CIDCO application, Development of API for integration with CIDCO Middleware and Aaple Sarkar.
+                    
+                    Technology: ASP.Net, VB.Net, MSSQL
+                    </p>
             </div>
     
             <!-- Text Card -->
